kubernetes/apps/base/default/pikvm/securitypolicy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: ${INSTANCE}-auth
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: ${INSTANCE}
  extAuth:
    failOpen: false
    headersToExtAuth:
      - accept
      - authorization
      - cookie
      - proxy-authorization
      - X-Forwarded-Proto
    http:
      backendRefs:
        - group: ''
          kind: Service
          name: authelia
          namespace: security
          port: 80
      path: /api/authz/ext-authz/
      headersToBackend:
        - Remote-User
        - Remote-Groups
        - Remote-Name
        - Remote-Email
